--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,11 @@ header{
 #mobile-navbar img{
     width: 50px;
 }
+
+#background-image{
+    background-image: url("./assets/header-bg-mobile.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+}
