--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header{
 #background-image #name-heading{
 display: flex;
 justify-content: center;
+padding-top: 100px;
 
 font-family: 'Inter';
 font-style: normal;
@@ -51,3 +52,13 @@ color:#36B37E;
 
 }
 
+#background-image p{   
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 28px;
+
+text-align: center;
+color: #172B4D;
+}
