--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@ header {
 #background-image {
   background-image: url("./assets/header-bg-mobile.png");
   background-repeat: no-repeat;
-  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   height: 100vh;
 }
@@ -19,7 +21,6 @@ header {
 #background-image #name-heading {
   display: flex;
   justify-content: center;
-  padding-top: 10px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -27,6 +28,7 @@ header {
   line-height: 52px;
   text-align: center;
   color: #172b4d;
+  padding-top: 40px;
 }
 
 #background-image #job-role {
@@ -49,23 +51,21 @@ header {
   line-height: 28px;
   text-align: center;
   color: #172b4d;
+  padding: 10px;
 }
 
 #social-icons ul {
   display: flex;
-  
   list-style-type: none;
   justify-content: center;
-
 }
+
 #social-icons ul li {
   margin: 10px;
- 
 }
 
-
 #arrow-down {
-  padding-top: 30px;
+  padding-top: 15px;
   display: flex;
   justify-content: center;
 }
