--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,38 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 header {
   display: flex;
   align-items: flex-end;
   flex-direction: column;
 }
-
-#mobile-navbar img {
-  width: 50px;
+.container{
+  padding: 0 27px;
 }
 
-#background-image {
+#mobile-navbar{
+  padding-top: 27px;
+  padding-right: 27px;
+}
+#mobile-navbar img {
+  width: 40px;
+}
+
+#headline-section {
   background-image: url("./assets/header-bg-mobile.png");
   background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: left 3rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
   width: 100%;
   height: 100vh;
 }
 
-#background-image #name-heading {
+#headline-section #name-heading {
   display: flex;
   justify-content: center;
   font-family: 'Inter', sans-serif;
@@ -29,9 +43,11 @@ header {
   text-align: center;
   color: #172b4d;
   padding-top: 40px;
+  background-position: top;
+  padding-bottom: 5px;
 }
 
-#background-image #job-role {
+#headline-section #job-role {
   display: flex;
   justify-content: center;
   font-family: 'Inter', sans-serif;
@@ -41,9 +57,10 @@ header {
   line-height: 52px;
   text-align: center;
   color: #36b37e;
+  padding-bottom: 10px;
 }
 
-#background-image p {
+#headline-section p {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -65,7 +82,7 @@ header {
 }
 
 #arrow-down {
-  padding-top: 15px;
+  padding-top: 25px;
   display: flex;
   justify-content: center;
 }
