--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ header {
   line-height: 52px;
   text-align: center;
   color: #3A4A42;
+  
   padding-top: 40px;
   background-position: top;
   padding-bottom: 5px;
@@ -134,6 +135,7 @@ border: none;
   
   border-radius: 8px;
   margin: 0 20px;
+  margin-top: 30px;
   row-gap: 20px;
   
 
@@ -142,23 +144,25 @@ border: none;
   display: flex;
   flex-direction: column;
 
+  background-color:  #D0D9D4;
   border: 1px solid #D0D9D4;
   border-radius: 8px;
   font-family: 'Inter', sans-serif;
   
   
 }
-.project .image{
+/* .project .image{
   width: 327;
   height: 222px;
   background-color:  #D0D9D4;
-}
+} */
 
 
 .project .content{
+  margin-top: 50%;
 
   background-color: white;
-  border: 1px solid #D0D9D4;
+  
   width: 327;
   height: 222px;
   border-radius: 8px;  
