--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,8 @@ color: #FFFFFF;
   color: #42526E;;
   padding: 10px;
 }
+.topright{
+  background: url(assets/righttop.svg);
+  background-repeat:no-repeat;
+  background-position: right top;
+}
