--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-family:'Inter';
+  font-family: 'Inter', sans-serif;
   list-style: none;
   text-decoration: none;
 }
 
-body{
+body {
   display: flex;
   flex-direction: column;
 }
@@ -82,6 +82,21 @@ header {
   padding: 10px;
 }
 
+.languages li {
+  background-color: #ebf0ee;
+  color: #3a4a42;
+  padding: 4px 4px;
+  border-radius: 4px;
+}
+
+.portfolio-languages li {
+  background-color: white;
+  color: #36b37e;
+  padding: 4px 4px;
+  border-radius: 4px;
+  justify-content: space-around;
+}
+
 #social-icons ul {
   display: flex;
   list-style-type: none;
@@ -107,109 +122,95 @@ header {
   font-size: 40px;
   line-height: 52px;
   text-align: center;
-  color: #3A4A42;
+  color: #3a4a42;
   padding-top: 40px;
   background-position: top;
   padding-bottom: 5px;
 }
 
-
-#line{
+#line {
   display: grid;
   justify-content: center;
 }
-#line hr{
-width: 48px;
-height: 4px;
-background: #36B37E;
-border-radius: 24px;
-border: none;
+
+#line hr {
+  width: 48px;
+  height: 4px;
+  background: #36b37e;
+  border-radius: 24px;
+  border: none;
 }
 
-#projects-card{
+#projects-card {
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: minmax(300px,auto);
-  
-  
+  grid-auto-rows: minmax(300px, auto);
   border-radius: 8px;
   margin: 0 20px;
   margin-top: 30px;
   row-gap: 20px;
-  
-
 }
-.project{
+
+.project {
   display: flex;
   flex-direction: column;
-
-  background-color:  #D0D9D4;
-  border: 1px solid #D0D9D4;
+  background-color: #d0d9d4;
+  border: 1px solid #d0d9d4;
   border-radius: 8px;
   font-family: 'Inter', sans-serif;
-  
-  
 }
+
 /* .project .image{
   width: 327;
   height: 222px;
   background-color:  #D0D9D4;
 } */
 
-
-.project .content{
+.project .content {
   margin-top: 50%;
-
   background-color: white;
-  
   width: 327;
   height: 222px;
-  border-radius: 8px;  
-  
+  border-radius: 8px;
 }
 
-
-
-.content h3{
+.content h3 {
   text-align: center;
   padding-top: 16px;
-  color: #3A4A42;
+  color: #3a4a42;
 }
 
-
-.project .languages{
+.languages {
   padding-top: 16px;
   display: flex;
   list-style: none;
   justify-content: space-between;
-  
-  gap:12px;
+  gap: 12px;
 }
 
-.languages{
+.project .languages {
   padding-top: 16px;
   display: flex;
   list-style: none;
   justify-content: space-between;
-  
-  gap:12px;
+  gap: 12px;
 }
-.portfolio-languages{
+
+.portfolio-languages {
   padding-top: 16px;
   display: flex;
   flex-wrap: wrap;
   list-style: none;
   justify-content: center;
-  
-  gap:12px;
+  gap: 12px;
 }
-.porfolio-details .languages{
+
+.porfolio-details .languages {
   padding-top: 16px;
   display: flex;
   list-style: none;
   justify-content: space-between;
-  
-  gap:12px;
+  gap: 12px;
 }
 
 /* .btn{
@@ -217,64 +218,34 @@ border: none;
   align-items: center;
 } */
 
-
-.project .btn{
+.project .btn {
   padding-top: 16px;
   display: flex;
   justify-content: center;
-  
-}
-.greenbtn{
-  background: #36B37F;
-  font-family: 'Inter';
-font-style: normal;
-font-weight: 500;
-font-size: 17px;
-line-height: 24px;
-border: none;
-border-radius: 4px;
-padding: 12px;
-color: #FFFFFF;
-margin-top: 20px;
-
 }
 
-.languages li{
-  background-color: #EBF0EE;
-  color: #3A4A42;
-  padding: 4px 4px;
+.greenbtn {
+  background: #36b37f;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  border: none;
   border-radius: 4px;
+  padding: 12px;
+  color: #fff;
+  margin-top: 20px;
 }
 
-.portfolio-languages li{
-  background-color: white;
-  color: #36B37E;
-  padding: 4px 4px;
-  border-radius: 4px;
-  justify-content: space-around;
-}
-
-.content .lang li{
-  background-color: white;
-  color: #3A4A42;
-  padding: 4px 4px;
-  border-radius: 4px;
-
-  
-}
-
-
-
-.project-btn{
+.project-btn {
   display: flex;
   flex-direction: column;
   justify-items: center;
   align-items: center;
-
 }
 
-#aboutme-heading{
-
+#aboutme-heading {
   display: flex;
   justify-content: center;
   font-family: 'Inter', sans-serif;
@@ -283,7 +254,7 @@ margin-top: 20px;
   font-size: 40px;
   line-height: 52px;
   text-align: center;
-  color: #3A4A42;
+  color: #3a4a42;
   padding-top: 40px;
   background-position: top;
   padding-bottom: 5px;
@@ -296,53 +267,46 @@ margin-top: 20px;
   font-size: 20px;
   line-height: 28px;
   text-align: center;
-  color: #42526E;;
+  color: #42526e;
   padding: 10px;
 }
-.topright{
+
+.topright {
   background: url(assets/righttop.svg);
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   background-position: right top;
 }
 
-.bottomleft{
+.bottomleft {
   background: url(assets/bottomleft.svg);
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   background-position: left bottom;
-
 }
-#about-myself .btn{
-  
+
+#about-myself .btn {
   display: flex;
   justify-content: center;
   padding-bottom: 10px;
-  
 }
 
-#portfolio-skills{
+#portfolio-skills {
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: minmax(300px,auto);
+  grid-auto-rows: minmax(300px, auto);
   row-gap: 20px;
   margin: 0 20px;
   justify-content: center;
-
-
 }
 
-.portfolio-details{
+.portfolio-details {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  background-color: #EBF0EE;
-  border: 1px solid #D0D9D4;
+  background-color: #ebf0ee;
+  border: 1px solid #d0d9d4;
   border-radius: 8px;
   font-family: 'Inter', sans-serif;
   color: #344563;
   padding-bottom: 40px;
-  
-  
-  
 }
