Applied hover effect on button

--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,12 @@ header {
   margin-top: 20px;
 }
 
+.greenbtn:hover {
+  background-color: #067044;
+  font-weight: 700px;
+  width: 150px;
+}
+
 .project-btn {
   display: flex;
   flex-direction: column;
