--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,10 @@ header {
   justify-content: center;
 }
 
+#footer-line {
+  display: grid;
+  justify-content: center;
+}
 #line hr {
   width: 48px;
   height: 4px;
@@ -141,6 +145,13 @@ header {
   border: none;
 }
 
+#footer-line hr {
+  width: 110px;
+  height: 4px;
+  background: black;
+  border-radius: 24px;
+  border: none;
+}
 #projects-card {
   display: grid;
   grid-template-columns: 1fr;
@@ -355,3 +366,6 @@ font-weight: 400;
 color: #42526E;
 }
 
+footer{
+  padding-top: 20px;
+}
