--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,7 @@ color: #172B4D;
 }
 
 .contact .form1{
-  padding: 12px 67px 12px 0;
+  padding: 12px;
   margin-top: 50px;
   outline: none;
   
