--- a/styles.css
+++ b/styles.css
@@ -434,5 +434,37 @@
       padding-right: 220px;
       box-sizing: border-box;
     }
+
+    #portfolio-skills {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-auto-rows: minmax(300px, auto);
+      row-gap: 20px;
+      /* margin: 0 20px; */
+      justify-content: center;
+      column-gap: 10px;
+      margin-left: 50px;
+      margin-right: 50px;
+    }
+
+    #headline-section {
+      background-image: url("./assets/Header-llustration-desktop.png");
+      background-repeat: no-repeat;
+      background-size: 100%;
+     
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      width: 100%;
+      height: 100vh;
+    }
+
+    #mobile-navbar img{
+      display: none;
+    }
+    
+   
+    
   }
 
