--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@
 }
 
 
-  * {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
@@ -401,10 +403,11 @@
   footer {
     padding-top: 20px;
   }
- 
-  #mobile-navbar ul {
-    display: none;
-  }  
+
+#navbar-grid{
+  display: none;
+}
+
 
   @media(min-width:768px) {
     #navbar-grid{
@@ -466,16 +469,30 @@
     #headline-section {
       background-image: url("./assets/Header-llustration-desktop.png");
       background-repeat: no-repeat;
-      background-size: 100%;
-     
+      background-size: cover;
+      background-position: auto; 
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
       justify-content: space-around;
       width: 100%;
-      height: 100vh;
+      margin-top: -40px;
+      padding-bottom: 300px;
     }
 
+    #headline-section p {
+      font-family: 'Inter', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 28px;
+      text-align: center;
+      color: #172b4d;
+      padding: 10px;
+      margin-left: 20%;
+      margin-right: 20%;
+      Line-height: 132%;
+    }
     #mobile-navbar img{
       display: none;
     }
