--- a/styles.css
+++ b/styles.css
@@ -426,9 +426,10 @@ footer {
     grid-template-columns: repeat(12, 1fr);
     background: url(assets/contactbg.PNG);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 70%;
     width: 100%;
-    padding-bottom: 200px;
+
+    padding-bottom: 100px;
     margin-top: 60px;
   }
 
@@ -515,8 +516,8 @@ footer {
     text-align: center;
     color: #172b4d;
     padding: 10px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
     line-height: 132%;
   }
 
