--- a/styles.css
+++ b/styles.css
@@ -520,11 +520,13 @@ footer {
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
-    text-align: center;
+    text-align: left;
     color: #172b4d;
     padding: 10px;
     line-height: 132%;
     width: 40%;
+    letter-spacing: 1px;
+
   }
 
   #mobile-navbar img {
